# VisualSortAlgorithm

./: CMakeLists.txt  README.md
src/: controller.cpp  controller.h  main.cpp  menustatemachine.cpp  menustatemachine.h  renderer.cpp  renderer.h  sortvisualizer.cpp  sortvisualizer.h  visualizerstatemachine.cpp  visualizerstatemachine.h
